z-index fix. To make footer links work

--- a/src/components/LayoutFooter/Footer.style.css
+++ b/src/components/LayoutFooter/Footer.style.css
@@ -7,7 +7,7 @@
     height: 150px;
     padding-top: 50px;
     padding-bottom: 50px;
-    z-index: -1;
+    z-index: 0;
 }
 
 .Footer-Links {
